Add 'tim' to build-server.yaml list

--- a/inventory/host_vars/build-server.yaml
+++ b/inventory/host_vars/build-server.yaml
@@ -14,3 +14,5 @@ users:
     key: https://github.com/bookwar.keys
   - name: vrutkovs
     key: https://github.com/vrutkovs.keys
+  - name: tim
+    key: https://github.com/tim77.keys
