--- a/inventory/host_vars/build-server.yaml
+++ b/inventory/host_vars/build-server.yaml
@@ -18,3 +18,13 @@ users:
     key: https://github.com/vrutkovs.keys
   - name: tim
     key: https://github.com/tim77.keys
+
+required_packages:
+  - mock
+  - rpmdevtools
+  - podman
+  - buildah
+  - gcc
+
+
+
