Matrix config: the whole server is dedicated to Matrix
Don't run it on `matrix.` subdomain

--- a/inventory/host_vars/matrix-server.yaml
+++ b/inventory/host_vars/matrix-server.yaml
@@ -1,4 +1,5 @@
 matrix_domain: russianfedora.online
+matrix_server_fqn_matrix: russianfedora.online
 
 matrix_ssl_lets_encrypt_support_email: admin@russianfedora.online
 
