matrix: disable registration

--- a/inventory/host_vars/matrix-server.yaml
+++ b/inventory/host_vars/matrix-server.yaml
@@ -29,3 +29,7 @@ matrix_synapse_enable_registration: true
 
 # disable mxisd
 matrix_mxisd_enabled: false
+
+
+# Disable registration
+matrix_riot_web_registration_enabled: false
