matrix: expose metrics

--- a/inventory/host_vars/matrix-server.yaml
+++ b/inventory/host_vars/matrix-server.yaml
@@ -45,3 +45,9 @@ run_self_check: false
 
 # Disable registration
 matrix_riot_web_registration_enabled: false
+
+# Enable metrics
+matrix_synapse_metrics_enabled: true
+matrix_nginx_proxy_proxy_synapse_metrics: false
+matrix_synapse_metrics_port: 9129
+matrix_synapse_container_metrics_api_host_bind_port: "127.0.0.1:9129"
