--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,2 +1,2 @@
 [defaults]
-roles_path=./roles:./misc/matrix/roles:~/.ansible/roles:/usr/share/ansible/roles:/etc/ansible/roles
+roles_path=./roles:./misc/matrix/roles:./misc:~/.ansible/roles:/usr/share/ansible/roles:/etc/ansible/roles
