--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "misc/matrix"]
 	path = misc/matrix
 	url = https://github.com/spantaleev/matrix-docker-ansible-deploy
+[submodule "misc/prometheus"]
+	path = misc/prometheus
+	url = https://github.com/ome/ansible-role-prometheus
