--- a/inventory/host_vars/matrix-server.yaml
+++ b/inventory/host_vars/matrix-server.yaml
@@ -25,7 +25,7 @@ matrix_dimension_enabled: false
 
 # enable registration
 # TODO: disable once clients would start supporting SSO
-matrix_synapse_enable_registration: true
+matrix_synapse_enable_registration: false
 
 # disable mxisd
 matrix_mxisd_enabled: false
