--- a/inventory/host_vars/matrix-server.yaml
+++ b/inventory/host_vars/matrix-server.yaml
@@ -16,8 +16,11 @@ matrix_coturn_enabled: false
 
 # enable matrix-bridge-mautrix-telegram
 # TODO: set API and hash in vault and then enable it
-#matrix_mautrix_telegram_enabled: true
-matrix_mautrix_telegram_enabled: false
+matrix_mautrix_telegram_enabled: true
+
+# enable shared secrets for double puppeting
+matrix_synapse_ext_password_provider_shared_secret_auth_enabled: true
+#matrix_synapse_ext_password_provider_shared_secret_auth_shared_secret is in Vault
 
 # enable integration manager
 # TODO: create a domain for that
