--- a/inventory/host_vars/matrix-server.yaml
+++ b/inventory/host_vars/matrix-server.yaml
@@ -42,6 +42,7 @@ run_synapse_register_user: false
 run_synapse_update_user_password: false
 run_synapse_import_media_store: false
 run_self_check: false
+run_stop: false
 
 # Disable registration
 matrix_riot_web_registration_enabled: false
