--- a/inventory/host_vars/matrix-server.yaml
+++ b/inventory/host_vars/matrix-server.yaml
@@ -18,6 +18,19 @@ matrix_coturn_enabled: false
 # TODO: set API and hash in vault and then enable it
 matrix_mautrix_telegram_enabled: true
 
+matrix_mautrix_telegram_configuration_extension_yaml:
+  bridge:
+    # Disable "user entered the chat" messages
+    state_event_formats:
+      join: ""
+      leave: ""
+      name_change: ""
+    permissions:
+      "{{ matrix_mautrix_telegram_homeserver_domain }}": "full"
+      "@vrutkovs:{{ matrix_mautrix_telegram_homeserver_domain }}": "admin"
+      "@tim:{{ matrix_mautrix_telegram_homeserver_domain }}": "admin"
+      "@xvitaly:{{ matrix_mautrix_telegram_homeserver_domain }}": "admin"
+
 # enable shared secrets for double puppeting
 matrix_synapse_ext_password_provider_shared_secret_auth_enabled: true
 #matrix_synapse_ext_password_provider_shared_secret_auth_shared_secret is in Vault
