--- a/inventory/host_vars/matrix-server.yaml
+++ b/inventory/host_vars/matrix-server.yaml
@@ -30,6 +30,9 @@ matrix_mautrix_telegram_configuration_extension_yaml:
       "@vrutkovs:{{ matrix_mautrix_telegram_homeserver_domain }}": "admin"
       "@tim:{{ matrix_mautrix_telegram_homeserver_domain }}": "admin"
       "@xvitaly:{{ matrix_mautrix_telegram_homeserver_domain }}": "admin"
+  metrics:
+    enabled: true
+    listen_port: 8000
 
 # enable shared secrets for double puppeting
 matrix_synapse_ext_password_provider_shared_secret_auth_enabled: true
