Add cockpit role and configuration

--- a/inventory/host_vars/build-server.yaml
+++ b/inventory/host_vars/build-server.yaml
@@ -30,5 +30,12 @@ required_packages:
   - fedpkg
   - koji
 
-
-
+# Default cockpit packages + docker
+cockpit_packages:
+  - cockpit
+  - cockpit-networkmanager
+  - cockpit-packagekit
+  - cockpit-selinux
+  - cockpit-storaged
+  - cockpit-docker
+  - cockpit-podman
