--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "misc/grafana"]
 	path = misc/grafana
 	url = https://github.com/escalate/ansible-grafana-docker
+[submodule "misc/cockpit"]
+	path = misc/cockpit
+	url = https://github.com/linux-system-roles/cockpit
