roles/flat-manager: copy config to mount dir

--- a/roles/flat-manager/tasks/main.yml
+++ b/roles/flat-manager/tasks/main.yml
@@ -13,7 +13,7 @@
 - name: Prepare flatmanager config
   template:
     src: templates/flatmanager.json
-    dest: /etc/flatmanager/flatmanager.json
+    dest: "{{ flatmanager_mount }}/config.json"
 
 - name: Install flatmanager systemd unit file
   template:
