--- a/inventory/host_vars/matrix-server.yaml
+++ b/inventory/host_vars/matrix-server.yaml
@@ -9,7 +9,7 @@ matrix_ssl_lets_encrypt_support_email: admin@russianfedora.online
 # random postgres password is now stored in vault
 #matrix_postgres_connection_password: SOME_RANDOM_STRING_WHICH_IS_IN_VAULT
 
-matrix_server_fqn_riot: "chat.{{ matrix_server_fqn_matrix }}"
+matrix_server_fqn_element: "chat.{{ matrix_server_fqn_matrix }}"
 
 # coturn is a TURN server for voice/video calls
 matrix_coturn_enabled: false
@@ -64,7 +64,7 @@ run_self_check: false
 run_stop: false
 
 # Disable registration
-matrix_riot_web_registration_enabled: false
+matrix_client_element_registration_enabled: false
 
 # Enable metrics
 matrix_synapse_metrics_enabled: true
