Export grafana via nginx-proxy configuration on custom domain

--- a/site_matrix.yaml
+++ b/site_matrix.yaml
@@ -8,6 +8,7 @@
     - matrix-synapse
     - matrix-client-element
     - matrix-dimension
+    - custom-proxy
     - matrix-nginx-proxy
     - matrix-coturn
     - matrix-common-after
