--- a/inventory/host_vars/matrix-server/vars.yaml
+++ b/inventory/host_vars/matrix-server/vars.yaml
@@ -74,3 +74,21 @@ matrix_synapse_container_metrics_api_host_bind_port: "127.0.0.1:9129"
 
 # Disable vars snapshotting - we're using git for that
 matrix_vars_yml_snapshotting_enabled: false
+
+# Update a list of domains to obtain certificates for
+matrix_ssl_domains_to_obtain_certificates_for: |
+  {{
+    ([matrix_server_fqn_matrix])
+    +
+    ([matrix_server_fqn_element] if matrix_client_element_enabled else [])
+    +
+    ([matrix_nginx_proxy_proxy_riot_compat_redirect_hostname] if matrix_nginx_proxy_proxy_riot_compat_redirect_enabled else [])
+    +
+    ([matrix_server_fqn_dimension] if matrix_dimension_enabled else [])
+    +
+    ([matrix_server_fqn_jitsi] if matrix_jitsi_enabled else [])
+    +
+    ([matrix_domain] if matrix_nginx_proxy_base_domain_serving_enabled else [])
+    +
+    (["grafana."+matrix_domain])
+  }}
