--- a/roles/antispam_bot/tasks/main.yaml
+++ b/roles/antispam_bot/tasks/main.yaml
@@ -12,8 +12,8 @@
   file:
     path: /var/log/ecasbot
     state: directory
-    owner: root
-    group: matrix
+    owner: matrix
+    group: root
     mode: 0775
 
 - name: Prepare ecasbot config
