rewrite repo path in nginx

--- a/roles/custom-proxy/files/dl.conf
+++ b/roles/custom-proxy/files/dl.conf
@@ -34,15 +34,14 @@ server {
 	ssl_prefer_server_ciphers on;
 	ssl_ciphers "EECDH+AESGCM:EDH+AESGCM:AES256+EECDH:AES256+EDH";
 
-		gzip on;
+	gzip on;
 	gzip_types text/plain application/json application/javascript text/css image/x-icon font/ttf image/gif;
 	add_header Strict-Transport-Security "max-age=31536000; includeSubDomains" always;
 	add_header X-Content-Type-Options nosniff;
 	add_header X-Frame-Options SAMEORIGIN;
 
-	location / {
-			root /srv/flatmanager/repo;
-
+	location /repo {
+		alias /srv/flatmanager/repo;
 		proxy_set_header Host $host;
 		proxy_set_header X-Forwarded-For $remote_addr;
 	}
