--- a/roles/custom-proxy/files/flatpak.conf
+++ b/roles/custom-proxy/files/flatpak.conf
@@ -47,6 +47,7 @@ server {
 
 		proxy_set_header Host $host;
 		proxy_set_header X-Forwarded-For $remote_addr;
+		proxy_set_header X-Forwarded-Proto https;
 	}
 
 }
