--- a/roles/custom-proxy/files/flatpak.conf
+++ b/roles/custom-proxy/files/flatpak.conf
@@ -48,6 +48,10 @@ server {
 		proxy_set_header Host $host;
 		proxy_set_header X-Forwarded-For $remote_addr;
 		proxy_set_header X-Forwarded-Proto https;
+
+		client_max_body_size 0;
+		proxy_read_timeout 600s;
+		add_header Vary Accept-Encoding;
 	}
 
 }
