--- a/inventory/host_vars/matrix-server/vars.yaml
+++ b/inventory/host_vars/matrix-server/vars.yaml
@@ -9,6 +9,9 @@ matrix_ssl_lets_encrypt_support_email: admin@russianfedora.online
 # random postgres password is now stored in vault
 #matrix_postgres_connection_password: SOME_RANDOM_STRING_WHICH_IS_IN_VAULT
 
+# random redis password is stored in vault
+# matrix_redis_connection_password: SOME_RANDOM_STRING_WHICH_IS_IN_VAULT
+
 matrix_server_fqn_element: "chat.{{ matrix_server_fqn_matrix }}"
 
 # coturn is a TURN server for voice/video calls
@@ -61,7 +64,7 @@ run_synapse_register_user: false
 run_synapse_update_user_password: false
 run_synapse_import_media_store: false
 run_self_check: false
-run_stop: false
+# run_stop: false
 
 # Disable registration
 matrix_client_element_registration_enabled: false
