--- a/inventory/host_vars/matrix-server/vars.yaml
+++ b/inventory/host_vars/matrix-server/vars.yaml
@@ -107,6 +107,7 @@ matrix_nginx_proxy_container_additional_volumes:
   options: Z
 
 matrix_synapse_workers_enabled: true
+matrix_redis_enabled: true
 matrix_synapse_workers_preset: "one-of-each"
 matrix_postgres_process_extra_arguments: [
   "-c 'max_connections=200'"
