--- a/inventory/host_vars/matrix-server/vars.yaml
+++ b/inventory/host_vars/matrix-server/vars.yaml
@@ -112,3 +112,4 @@ matrix_synapse_workers_preset: "one-of-each"
 matrix_postgres_process_extra_arguments: [
   "-c 'max_connections=200'"
 ]
+matrix_synapse_log_level: "INFO"
