matrix: import worker vars

--- a/site_matrix.yaml
+++ b/site_matrix.yaml
@@ -1,5 +1,7 @@
 ---
 - hosts: matrix_servers
+  vars_files:
+    - misc/matrix/roles/matrix-synapse/vars/workers.yml
   roles:
     - matrix-base
     - matrix-mailer
