--- a/roles/custom-proxy/files/dl.conf
+++ b/roles/custom-proxy/files/dl.conf
@@ -44,6 +44,8 @@ server {
 		alias /srv/flatmanager/repo;
 		proxy_set_header Host $host;
 		proxy_set_header X-Forwarded-For $remote_addr;
+		proxy_set_header Connection "";
+		proxy_http_version 1.1;
 	}
 
 }
