--- a/inventory/host_vars/matrix-server/vars.yaml
+++ b/inventory/host_vars/matrix-server/vars.yaml
@@ -29,10 +29,9 @@ matrix_mautrix_telegram_configuration_extension_yaml:
       leave: ""
       name_change: ""
     permissions:
-      "{{ matrix_mautrix_telegram_homeserver_domain }}": "full"
-      "@vrutkovs:{{ matrix_mautrix_telegram_homeserver_domain }}": "admin"
-      "@tim:{{ matrix_mautrix_telegram_homeserver_domain }}": "admin"
-      "@xvitaly:{{ matrix_mautrix_telegram_homeserver_domain }}": "admin"
+      "@vrutkovs:{{ matrix_domain }}": "admin"
+      "@tim:{{ matrix_domain }}": "admin"
+      "@xvitaly:{{ matrix_domain }}": "admin"
   metrics:
     enabled: true
     listen_port: 8000
