Output lines as yaml

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,2 +1,6 @@
 [defaults]
 roles_path=./roles:./misc/matrix/roles:./misc:~/.ansible/roles:/usr/share/ansible/roles:/etc/ansible/roles
+# Use the YAML callback plugin.
+stdout_callback = yaml
+# Use the stdout_callback when running ad-hoc commands.
+bin_ansible_callbacks = True
