--- a/ansible.cfg
+++ b/ansible.cfg
@@ -4,3 +4,5 @@ roles_path=./roles:./misc/matrix/roles:./misc:~/.ansible/roles:/usr/share/ansibl
 stdout_callback = yaml
 # Use the stdout_callback when running ad-hoc commands.
 bin_ansible_callbacks = True
+# Read vault password from vault.password
+vault_password_file = ./vault.password
