--- a/inventory/host_vars/matrix-server.yaml
+++ b/inventory/host_vars/matrix-server.yaml
@@ -30,6 +30,7 @@ matrix_mautrix_telegram_configuration_extension_yaml:
       "@vrutkovs:{{ matrix_mautrix_telegram_homeserver_domain }}": "admin"
       "@tim:{{ matrix_mautrix_telegram_homeserver_domain }}": "admin"
       "@xvitaly:{{ matrix_mautrix_telegram_homeserver_domain }}": "admin"
+      "@gasinvein:matrix.org": "full"
   metrics:
     enabled: true
     listen_port: 8000
