--- a/inventory/host_vars/matrix-server/vars.yaml
+++ b/inventory/host_vars/matrix-server/vars.yaml
@@ -32,6 +32,7 @@ matrix_mautrix_telegram_configuration_extension_yaml:
       "@vrutkovs:{{ matrix_domain }}": "admin"
       "@tim:{{ matrix_domain }}": "admin"
       "@xvitaly:{{ matrix_domain }}": "admin"
+      "@gasinvein:matrix.org": "full"
   metrics:
     enabled: true
     listen_port: 8000
