Add conduit role

--- a/site_matrix.yaml
+++ b/site_matrix.yaml
@@ -12,6 +12,7 @@
     - matrix-bridge-hookshot
     - matrix-synapse
     - matrix-dendrite
+    - matrix-conduit
     - matrix-synapse-admin
     - matrix-prometheus-node-exporter
     - matrix-prometheus
