--- a/inventory/host_vars/matrix-server.yaml
+++ b/inventory/host_vars/matrix-server.yaml
@@ -34,6 +34,8 @@ matrix_mautrix_telegram_configuration_extension_yaml:
   metrics:
     enabled: true
     listen_port: 8000
+  appservice:
+    ephemeral_events: true
 
 # enable shared secrets for double puppeting
 matrix_synapse_ext_password_provider_shared_secret_auth_enabled: true
