--- a/inventory/host_vars/matrix-server/vars.yaml
+++ b/inventory/host_vars/matrix-server/vars.yaml
@@ -1,7 +1,7 @@
 matrix_domain: russianfedora.online
 matrix_server_fqn_matrix: russianfedora.online
 
-matrix_ssl_lets_encrypt_support_email: admin@russianfedora.online
+devture_traefik_config_certificatesResolvers_acme_email: admin@russianfedora.online
 
 # secret key is now stored in vault
 # matrix_synapse_macaroon_secret_key: SOME_RANDOM_STRING_WHICH_IS_IN_VAULT
@@ -84,28 +84,6 @@ request_certs_for_additional_domains:
 - "dl.{{ matrix_domain }}"
 - "{{ matrix_server_fqn_grafana }}"
 
-matrix_ssl_domains_to_obtain_certificates_for: |
-  {{
-    ([matrix_server_fqn_matrix])
-    +
-    ([matrix_server_fqn_element] if matrix_client_element_enabled else [])
-    +
-    ([matrix_nginx_proxy_proxy_riot_compat_redirect_hostname] if matrix_nginx_proxy_proxy_riot_compat_redirect_enabled else [])
-    +
-    ([matrix_server_fqn_dimension] if matrix_dimension_enabled else [])
-    +
-    ([matrix_server_fqn_jitsi] if jitsi_enabled else [])
-    +
-    ([matrix_domain] if matrix_nginx_proxy_base_domain_serving_enabled else [])
-    +
-    (request_certs_for_additional_domains)
-  }}
-
-matrix_nginx_proxy_container_additional_volumes:
-- src: /srv/flatmanager/repo
-  dst: /srv/flatmanager/repo
-  options: Z
-
 matrix_synapse_workers_enabled: true
 redis_enabled: true
 matrix_synapse_workers_preset: "one-of-each"
@@ -120,4 +98,4 @@ prometheus_node_exporter_enabled: true
 grafana_enabled: true
 grafana_anonymous_access: true
 grafana_default_admin_user: admin
-matrix_playbook_reverse_proxy_type: playbook-managed-nginx
+matrix_playbook_reverse_proxy_type: playbook-managed-traefik
